Fix overflow on mobile

--- a/app.scss
+++ b/app.scss
@@ -69,9 +69,11 @@ body {
   }
 }
 
+html,
 body {
   @media only screen and (max-width: 790px) {
     margin-top: 0;
     overflow-x: hidden;
+    position: relative;
   }
 }
